--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <body style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: center;  background-color: rgb(45, 149, 235); text-decoration: wavy; text-shadow: 5ch; height: 60; width: 60;">
         <div id="container"> 
         <h1>Lab Task 9</h1><br>
+
+
+        <div id ="profile">
+
         <div id="info">
         <b>Abdullah Malik</b><br>
         <u>john-doe</john-doe></u><br>
@@ -15,12 +19,19 @@
         <u>Pakistan</u><br>
         <i>Aries</i><br>
             </div>
-            <div id="book">
+
+            
+
+
+            <div id="book"> 
         <img src="C:\Users\l250815\Desktop\book.jpg"
         width = "150" height = "200">
         <p>Harry Potter and sorcerers stone.</p>
         <p>The book is the starting book of an award winning series called "Harry Potter", written by J.K. Rowling. This book marks the start of a wicked and magical journey of a bulied boy, Harry, living in a small room under the stairs, in his uncle's home. Barely making it through each day, Harry is approached by a wizard who invites Harry to Hogwarts. </p>
             </div>
+
+        </div>
+
         <h2 style="width: 100; height: 100;"> <u>List of Favourite Food items: </u></h2>
         <li><b>burger</b></li>
         <li>pizza </li>
